Fix ramps visibility and improve screenshot functionality

--- a/styles.css
+++ b/styles.css
@@ -17,52 +17,60 @@ body {
 
 #frameContainer {
   display: grid;
-  grid-template-columns: auto 1fr auto; /* 3 columns: fixed (auto), flexible (1fr), fixed (auto) */
-  grid-template-rows: auto 1fr auto;    /* 3 rows: fixed (auto), flexible (1fr), fixed (auto) */
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
   width: fit-content;
   height: fit-content;
   position: relative;
 }
 
-/* Frame divs: fill with grey */
 .frame {
   background-color: grey;
 }
 
-/* Frame corner divs */
 .top-left, .top-right, .bottom-left, .bottom-right {
   width: 100px;
   height: 100px;
 }
 
-/* Top and bottom frame divs */
 .top, .bottom {
   height: 100px;
 }
 
-/* Left and right frame divs */
 .left, .right {
   width: 100px;
 }
 
-/* Central div containing the grid */
 .center {
-  background-color: white;
+  background-color: rgb(22, 22, 22);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#gridContainer {
-  border: 5px solid lightgrey;
+/* Outer dark grey border */
+.outer-container {
+  padding: 5px;
+  background-color: #202020; /* Outermost dark grey background */
   display: inline-block;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 10px;
+  box-sizing: border-box;
+}
+
+/* Middle light grey border */
+.inner-container {
+  padding: 5px; /* Inner padding for the light grey border */
+  border: 5px solid lightgrey;
+  background-color: #1a1a1a; /* Dark grey background inside the light grey border */
+  box-sizing: border-box;
 }
 
 /* Style for individual tile images */
+#gridContainer {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
 #gridContainer img {
   display: block;
   margin: 0;
@@ -105,7 +113,6 @@ body {
   opacity: 1;
 }
 
-/* Thumb styles for WebKit browsers */
 #lengthSlider::-webkit-slider-thumb,
 #widthSlider::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -125,7 +132,6 @@ body {
   border-radius: 5px;
 }
 
-/* Thumb and track styles for Firefox */
 #lengthSlider::-moz-range-thumb,
 #widthSlider::-moz-range-thumb {
   width: 18px;
